# constitute-gateway

./: .gitattributes  .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  config.example.json  project.json  rust-toolchain.toml
.github/workflows/: build.yml  docs.yml  release.yml
docs/: DEVELOPMENT.md  FCOS.md  OPERATIONS.md  OPERATOR.md  PROTOCOL.md  README.md  ROADMAP.md
infra/fcos/: README.md  config.template.bu
scripts/: build.ps1  build.sh  check-update.ps1  harden-host.sh  install-latest.ps1  install-latest.sh  install-service.ps1  install-systemd-override.sh  run.ps1  run.sh
scripts/ci/: checkout-protocol-dependency.sh
scripts/fcos/: firstboot-bootstrap.sh  prepare-auto-update-image.sh  render-config.sh  usb-prep-linux.sh
scripts/linux/: build.sh  deploy-opinionated.sh  harden-host.sh  install-dev-local.sh  install-latest.sh  install-service.sh  install-systemd-override.sh  package-operator.sh  package.sh
scripts/windows/: build.ps1  install-latest.ps1  install-service.ps1  prepare-auto-update-image.ps1  run-gateway.ps1  usb-prep.ps1
snap/: snapcraft.yaml
snap/hooks/: configure
src/: discovery.rs  grants.rs  hardening.rs  keystore.rs  lib.rs  local_relay.rs  logging_surface.rs  main.rs  managed.rs  mitigation.rs  nostr.rs  platform.rs  relay.rs  storage_proof.rs  swarm_edge.rs  swarm_edge_server.rs  swarm_store.rs  transport.rs  util.rs
tests/: smoke.rs  swarm_edge.rs
