[package]
name = "constitute-gateway"
version = "0.1.0"
edition = "2021"
license = "UNLICENSED"

[features]
default = ["platform-linux"]
platform-linux = []
platform-windows = []

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.36", features = ["rt-multi-thread", "macros", "signal"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
