[package]
name = "constitute-gateway"
version = "0.1.0"
edition = "2021"

[features]
default = []
platform-linux = []
platform-windows = []

[dependencies]
anyhow = "1"
base64 = "0.22"
clap = { version = "4", features = ["derive"] }
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal", "net"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
secp256k1 = { version = "0.30", features = ["rand", "global-context"] }

tokio-tungstenite = "0.23"
url = "2"
futures-util = "0.3"

[dev-dependencies]
tokio = { version = "1", features = ["time", "net", "sync"] }


