[package]
name = "constitute-gateway"
version = "0.1.0"
edition = "2021"

[features]
default = []
platform-linux = []
platform-windows = []

[dependencies]
anyhow = "1"
argon2 = "0.5"
base64 = "0.22"
chacha20poly1305 = "0.10"
clap = { version = "4", features = ["derive"] }
keyring = "2"
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal", "net", "time", "sync"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
secp256k1 = { version = "0.30", features = ["rand", "global-context"] }

tokio-tungstenite = "0.23"
tokio-rustls = "0.26"
rustls-pemfile = "2"
url = "2"
futures-util = "0.3"
sysinfo = "0.29"
bytes = "1"
quinn = { version = "0.11", default-features = false, features = ["runtime-tokio", "rustls-ring"] }
rcgen = "0.13"
rustls = "0.23"

[dev-dependencies]
tokio = { version = "1", features = ["time", "net", "sync"] }

